deploy(ec2): 우분투 환경 수정, ts-alias
